| Summary: | ASTERISK-29042: res_parking: Parker UUID is no longer copied | ||
| Reporter: | Misha Vodsedalek (vmisha) | Labels: | patch |
| Date Opened: | 2020-08-24 09:50:24 | Date Closed: | 2020-08-31 12:13:31 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_parking |
| Versions: | 13.35.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Asterisk 13.35.0 | Attachments: | ( 0) change_in_13.35.diff |
| Description: | A change introduced in Asterisk 13.35.0 eliminated a line that was copying parker_uuid into the subscription data structure. Without the parker_uuid, the feature does not work correctly.
The specific change that introduced the problem is in the attached file change_in_13.35.diff | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-08-24 09:50:25.878-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2020-08-24 11:40:43.530-0500 Would you be willing to sign the license agreement and put this up for review for inclusion? By: Misha Vodsedalek (vmisha) 2020-08-24 12:18:22.560-0500 I was hoping that I wouldn't need to go through all the legal stuff today. :-) Okay - I read through it and signed the agreement - waiting for the email response. It sounds like I'll have to remove the patch and add it again after the response arrives... By: Joshua C. Colp (jcolp) 2020-08-24 12:22:34.527-0500 Once you've followed the Code Review process [1] and submitted your code to Gerrit [2] be sure to edit this JIRA issue and add the Gerrit review URL in the appropriate field. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Joshua C. Colp (jcolp) 2020-08-27 04:28:31.488-0500 Any progress or issues with your license agreement or getting this up for review? By: Joshua C. Colp (jcolp) 2020-08-28 04:31:31.008-0500 Since I'd like to get this into the next set of release candidates early next week I've gone ahead and put the change up for review. By: Misha Vodsedalek (vmisha) 2020-08-28 04:46:38.201-0500 No problem at all. The license agreement was approved. I am not familiar with gerrit, so I was planning to look at it over the weekend. But the one liner that is quite obvious can be done by anymore. Thanks. By: Friendly Automation (friendly-automation) 2020-08-31 12:13:32.501-0500 Change 14817 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14817|https://gerrit.asterisk.org/c/asterisk/+/14817] By: Friendly Automation (friendly-automation) 2020-08-31 12:15:30.611-0500 Change 14843 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14843|https://gerrit.asterisk.org/c/asterisk/+/14843] By: Friendly Automation (friendly-automation) 2020-08-31 12:21:02.478-0500 Change 14839 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14839|https://gerrit.asterisk.org/c/asterisk/+/14839] By: Friendly Automation (friendly-automation) 2020-08-31 12:23:03.039-0500 Change 14840 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14840|https://gerrit.asterisk.org/c/asterisk/+/14840] By: Friendly Automation (friendly-automation) 2020-08-31 12:25:00.400-0500 Change 14844 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14844|https://gerrit.asterisk.org/c/asterisk/+/14844] By: Friendly Automation (friendly-automation) 2020-08-31 12:25:18.552-0500 Change 14842 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14842|https://gerrit.asterisk.org/c/asterisk/+/14842] By: Friendly Automation (friendly-automation) 2020-08-31 12:25:49.379-0500 Change 14845 merged by Friendly Automation: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14845|https://gerrit.asterisk.org/c/asterisk/+/14845] By: Friendly Automation (friendly-automation) 2020-08-31 13:01:02.016-0500 Change 14841 merged by Joshua Colp: parking: Copy parker UUID as well. [https://gerrit.asterisk.org/c/asterisk/+/14841|https://gerrit.asterisk.org/c/asterisk/+/14841] | ||